# reference_code

./: README.md
WalOS/: Makefile.lua  Makefile.macos  Makefile.ubuntu  Makefile.xm6xx  README-XM6xx.md  README.md  buildlua.sh
WalOS/doc/: 构建说明.md
WalOS/doc/sdk/: 00版本信息.md  01系统介绍.md  02激活登陆.md  03配置管理.md  04帐户管理.md  05访客管理.md  06日志管理.md  07策略管理.md  08设备管理.md  09广告推送.md
WalOS/doc/walos/: 06.管理平面接口.md
WalOS/include/: bisp_aie.h  bisp_hal.h  fdrcp-utils.h  fdrcp.h  list.h  logger.h  lvgui-yuv.h  lvgui.h
WalOS/lua/: Basedb.lua  CPAdapter.lua  CloudApp.lua  LogrGen.lua  Logrdb.lua  OSAdapter.lua  Test.lua  TestCloud.lua  TestConf.lua  TestFeature.lua  TestLogrdb.lua  TestUser.lua  TestVisitor.lua  Utils.lua  WalOS.lua  WebApp.lua
WalOS/src/: bisp-amd64.c  bisp-xm6xx.c  fdrcp-lua.c  fdrcp-test.c  fdrcp-utils.c  fdrcp.c  logger.c  lvgui-decoder.c  lvgui-test.c  lvgui-yuv-test.c  lvgui-yuv.c  lvgui.c  walos-lua.c  walos-utils.c  walos.c
WalOS/targets/linux-xm650/data/: basedb.sdb  default.json  logrdb.sdb
WalOS/targets/linux-xm650/lib/: libssl.so.1.0.0
WalOS/targets/linux-xm650/modules/: base64.lua  sqlite3-blob.lua
WalOS/template/data/: prikey.ecc  pubkey.ecc
WalOS/template/linux-amd64/: libluajit-5.1.so.2.1.0
WalOS/template/linux-xm650/: libcrypto.so.1.0.0  libsqlite3.so.0.8.6
WalOS/template/macosx-amd64/: libcrypto.dylib  libsqlite3.dylib  libssl.dylib  libtffi_wrap.dylib
WalOS/template/modules/turbo/: httputil.lua  platform.lua
WalOS/template/testcase/: .gitignore  config-gen.js  config.default  http-fetch.js  user-gen.js  visitor-gen.js
WalOS/tools/: Makefile  genkey.c  x2bmp.c
WalOS/xm6xx-tools/: xm6xx_firmware.sh  xm6xx_pkg.sh  xm6xx_upgrade.sh
XM650-PACK/: Readme.md  readme.txt
XM650-PACK/pack/: .gitignore  pack.sh  readme.txt
XM650-PACK/pack/custom/CustomConfig/: AVEnc.custom  Device.json  Encode.json  ExtDevIDConfig.custom  Isp.json  Record.custom  Storage.custom
XM650-PACK/pack/kernel/: uImage
XM650-PACK/pack/romfs/etc/: inittab  passwd  services
XM650-PACK/pack/romfs/lib/: firmware  ld-uClibc.so.0  libc.so.0  libcrypt.so.0  libdl.so.0  libgcc_s.so.1  libm.so.0  libnsl.so.0  libpthread.so.0  libresolv.so.0  librt.so.0  libstdc++.so.6.0.20  libuargp.so.0  libutil.so.0  (+1 more)
XM650-PACK/pack/tools/: mkall_8M  mkcramfs  mkimage  mkpkt  zip
XM650-PACK/pack/uboot/: mkenvimage.sh  uboot-128MB-env.txt
fdr-server/: CMakeLists.txt  Makefile.amd64  Makefile.dv300  Makefile.xm6xx  README.md  cmake-xm6xx-upgrade.sh  sdk_sync.sh
fdr-server/doc/: fdrsdk-api.txt  fdrsdk-dbs.txt  fdrsdk-infra.txt
fdr-server/include/: bcp.h  bisp.h  bisp_aie.h  bisp_gui.h  fdr-cp.h  fdr-dbs.h  fdr-discover.h  fdr-gui.h  fdr-handler.h  fdr-license.h  fdr-logger.h  fdr-mp.h  fdr-network.h  fdr-path.h  fdr-qrcode.h  fdr-test.h  fdr-util.h  fdr-version.h  fdr-yuv.h  fdr.h  list.h
fdr-server/src/: bisp-amd64.c  bisp-xm6xx.c  fdr-cp-lvgui.c  fdr-cp-test.c  fdr-cp-xmui.c  fdr-cp.c  fdr-dbs-config.c  fdr-dbs-feature.c  fdr-dbs-guest.c  fdr-dbs-test.c  fdr-dbs-user.c  fdr-dbs.c  fdr-discover.c  fdr-gui-decoder.c  fdr-gui.c  fdr-handler-logger.c  fdr-handler-test.c  fdr-handler-user.c  fdr-handler.c  fdr-license.c  fdr-logger.c  fdr-mp-cloud.c  fdr-mp-local.c  fdr-mp-test.c  fdr-mp.c  fdr-network.c  fdr-qrcode.c  fdr-test.c  fdr-util.c  fdr-version.c  fdr-yuv-test.c  fdr-yuv.c  fdr.c  main.c
fdr-server/test/: guest-gen.js  user-gen.js
fdr-server/test/configs/: session.json  settings.json
fdr-server/thirdparts/littlevgl-6.0/: Makefile.amd64  lv_conf.h  lv_drv_conf.h  main.c
fdr-server/thirdparts/littlevgl-6.0/lv_drivers/: lv_drivers.mk
fdr-server/thirdparts/littlevgl-6.0/lv_drivers/display/: display.mk
fdr-server/thirdparts/littlevgl-6.0/lvgl/: lvgl.h
fdr-server/thirdparts/littlevgl-6.0/lvgl/src/lv_draw/: lv_draw_basic.c  lv_draw_label.c
fdr-server/thirdparts/littlevgl-6.0/lvgl/src/lv_font/: lv_font.h  lv_font_ft.c
fdr-server/thirdparts/misc/: base58-test.c  base58.c  base58.h  sha256.h  sqlite3.c
fdrsdk-xm630/: A1000.c  A1050.c  CMakeLists.txt  Makefile  README-dev.md  README-production-testing.md  README-program-sop.md  README-third-party.md
fdrsdk-xm630/include/bashi/: Unicode.h  bitmap_rotate.h  board.h  by_f300.h  hal_485.h  hal_adc.h  hal_audio.h  hal_fdr.h  hal_gpio.h  hal_hw_ctl.h  hal_image.h  hal_jpeg.h  hal_jpeg_player.h  hal_key.h  hal_layer.h  hal_led.h  hal_log.h  hal_osd.h  hal_pir.h  hal_pwm.h  hal_relay.h  hal_sys.h  hal_timer.h  hal_touch.h  hal_uart.h  hal_vio.h  hal_wifi.h  mlx90640.h  network.h  pwm.h  sys_comm.h  xm_comm.h
fdrsdk-xm630/include/mpp/: Camera.h  gpio_i2c.h  xm_comm_aio.h  xm_comm_venc.h
fdrsdk-xm630/include/smart/: smart_comm.h
fdrsdk-xm630/include/smart/ia/: xm_fr_interface.h  xm_ia_comm.h  xm_ia_fdr_interface.h
fdrsdk-xm630/install/: A1050  fdrdemo  fdrserver
fdrsdk-xm630/src/: Unicode.c  bitmap_rotate.c  by_f300.c  hal_485.c  hal_adc.c  hal_audio.c  hal_fdr.c  hal_gpio.c  hal_hw_ctl.c  hal_image.c  hal_jpeg.c  hal_jpeg_player.c  hal_key.c  hal_layer.c  hal_led.c  hal_osd.c  hal_pir.c  hal_pwm.c  hal_relay.c  hal_sys.c  hal_timer.c  hal_touch.c  hal_uart.c  hal_vio.c  hal_wifi.c  mlx90640.c  network.c  pwm.c
xm550-vr/: Makefile  README-dev.md  httpserver.js  settings.json
xm550-vr/app/: base58.h  config.c  config.h  config_mgr.c  config_mgr.h  httpserver.c  httpserver.h  logger.c  logger.h  main.c  uart.c  uart.h  udp_server.c  udp_server.h  vr.c  vr.h  vr_uart.c  vr_uart.h
xm550-vr/include/ZXing-wrapper/: zxing_wrapper.h
xm550-vr/include/bashi/: cJSON.h  hal_gpio.h  hal_image.h  hal_jpeg.h  hal_layer.h  hal_log.h  hal_sdk.h  hal_sys.h  hal_timer.h  hal_types.h  hal_vio.h  network.h
xm550-vr/include/mpp/: mpi_region.h  xm_comm_region.h  xm_comm_vo.h
xm550-vr/include/smart/: smart_fdr.h
xm550-vr/include/vr/: light_interface.h
xm550-vr/install/: hash.txt  vrapp
xm550-vr/install/xm6xx_pkg/: xm6xx_upgrade.sh
xm550-vr/libsrc/: cJSON.c  hal_gpio.c  hal_image.c  hal_jpeg.c  hal_layer.c  hal_sys.c  hal_timer.c  hal_vio.c
xm550-vr/samples/vr/: main.c
xm550-vr/xm6xx-tools/: xm6xx_pkg.sh
(+29 files in other folders)
